public/css/index.css
/* ... */
#weather i {
    color: white;
    font-family: 'weather';
    font-size: 35px;
    font-weight: normal;
    font-style: normal;
    line-height: 1.0;
    text-transform: none;
}

.icon-0:before {
    content: ":";
}

.icon-1:before {
    content: "p";
}

.icon-2:before {
    content: "S";
}

.icon-3:before {
    content: "Q";
}

.icon-4:before {
    content: "S";
}

.icon-5:before {
    content: "W";
}

.icon-6:before {
    content: "W";
}

.icon-7:before {
    content: "W";
}

.icon-8:before {
    content: "W";
}

.icon-9:before {
    content: "I";
}

.icon-10:before {
    content: "W";
}

.icon-11:before {
    content: "I";
}

.icon-12:before {
    content: "I";
}

.icon-13:before {
    content: "I";
}

.icon-14:before {
    content: "I";
}

.icon-15:before {
    content: "W";
}

.icon-16:before {
    content: "I";
}

.icon-17:before {
    content: "W";
}

.icon-18:before {
    content: "U";
}

.icon-19:before {
    content: "Z";
}

.icon-20:before {
    content: "Z";
}

.icon-21:before {
    content: "Z";
}

.icon-22:before {
    content: "Z";
}

.icon-23:before {
    content: "Z";
}

.icon-24:before {
    content: "E";
}

.icon-25:before {
    content: "E";
}

.icon-26:before {
    content: "3";
}

.icon-27:before {
    content: "a";
}

.icon-28:before {
    content: "A";
}

.icon-29:before {
    content: "a";
}

.icon-30:before {
    content: "A";
}

.icon-31:before {
    content: "6";
}

.icon-32:before {
    content: "1";
}

.icon-33:before {
    content: "6";
}

.icon-34:before {
    content: "1";
}

.icon-35:before {
    content: "W";
}

.icon-36:before {
    content: "1";
}

.icon-37:before {
    content: "S";
}

.icon-38:before {
    content: "S";
}

.icon-39:before {
    content: "S";
}

.icon-40:before {
    content: "M";
}

.icon-41:before {
    content: "W";
}

.icon-42:before {
    content: "I";
}

.icon-43:before {
    content: "W";
}

.icon-44:before {
    content: "a";
}

.icon-45:before {
    content: "S";
}

.icon-46:before {
    content: "U";
}

.icon-47:before {
    content: "S";
}

#weather h2 {
    margin: 0 0 8px;
    color: white;
    font-size: 18px;
    font-weight: 300;
    text-align: center;
    text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.15);
    font-family: 'SourceSansPro', sans-serif; 
}

#weather ul {
    margin: 0;
    padding: 0;
}

#weather li {
    background: black;
    background: rgba(255, 255, 255, 0.90);
    padding: 20px;
    display: inline-block;
    border-radius: 5px;
}

#weather .currently {
    margin: 0 20px;
}


/* form length */

.form-group {
    box-sizing: border-box;
    width: 450px;
}


/* border to square for form */

.form-control, .btn {
    border-radius: 0px;
}

.form-group2 {
    width: 150px;
}


/* submit button */

.btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
    background-color: #1e73be !important;
    border-radius: 0px;
    border-color: #1e73be !important;
}

.pad-top {
    padding-top: 15px;
    padding-bottom: 10px;
}


/* footer */

#myFooter {
    color: black;
}

#myFooter .footer-copyright {
    padding-top: 3px;
    padding-bottom: 3px;
    text-align: left;
}

#myFooter .navbar-brand {
    margin-top: 45px;
    height: 65px;
}

#myFooter .footer-copyright p {
    margin: 10px;
    color: black;
    text-align: left !important;
}

#myFooter h5 {
    color: black;
    font-weight: bold;
    margin-top: 30px;
}

#myFooter h2 a {
    font-size: 50px;
    text-align: center;
    /*color: #fff; */
}

#myFooter a {
    color: black;
    text-decoration: none;
}

#myFooter a:hover, #myFooter a:focus {
    text-decoration: none;
    color: #1e73be;
}


/* makes link in footer center align */

.container2, .letterstoeditor {
    text-align: center;
}

@media screen and (max-width: 767px) {
    #myFooter {
        text-align: center;
    }

    .subsectiontitle, h4, p.author-left, .author-mobile, p.author{
      text-align: center;
    }
}


/* subscribe */

.description {
    font-size: 14px;
    letter-spacing: 1px;
    line-height: 1.3em;
    margin: -2px 0 15px;
    text-align: center;
}

.input2 {
    display: flex;
    align-items: center;
    color: black;
}

.button {
    height: 44px;
    border: none;
    margin:0;
}

#email2 {
    width: 100%;
    background: #e3e3e3;
    font-family: 'SourceSansPro', sans-serif;
    color: #737373;
    letter-spacing: 1px;
    text-indent: 5%;
    border-radius: 0px;
}

#submit {
    width: 40%;
    height: 45px;
    background: #1e73be;
    font-family: 'SourceSansPro', sans-serif;
    font-weight: bold;
    color: white;
    letter-spacing: 1px;
    cursor: pointer;
    transition: background .3s ease-in-out;
    border-radius: 0px;
}

#submit:hover {
    background-color: #185a94;
}

input2:focus {
    outline: none;
    outline: 2px solid #1e73be;
    box-shadow: 0 0 2px #1e73be;
}

.sorting {
    padding-right: 50px;
}


/* style for the back to top button */

.back-to-top {
    cursor: pointer;
    position: fixed;
    bottom: 20px;
    right: 50px;
    display: none;
    padding-top: 12px;
    padding-bottom: 12px;
}


#mobilenav_section-title {
    font-size: 20px;
    padding: 0;
    width: 100%;
}

#mobilenav_section {
    padding: 20px;
    padding-bottom: 10px;
}

#mobilenav_subsection {
    color: #999999;
    padding: 5px;
    text-decoration: none;
    display: block;
    font-size: 13px !important;
    width: 50%;
    float: left;
}

a.whitetext {
    color: white;
}


/* Expandable search box from https://codepen.io/mort3za/pen/dPyjMv
/* Note: don't change 0.8s in transition. */

form.search-form {
    width: 200px;
    height: 30px;
    margin: 5% auto;
    padding: 10px;
}
/* ... */

